# p3dx

./: deps.repos
p3dx_control/config/: control.yaml
p3dx_control/config_wo_ns/: control.yaml  localization.yaml
p3dx_control/launch/: control_wo_ns.launch
p3dx_description/launch/: multi_pioneer3dx.urdf.launch
p3dx_description/urdf/laser/: hokuyo.xacro
p3dx_description/urdf/p3dx/: pioneer3dx_body.xacro  pioneer3dx_chassis.xacro
p3dx_gazebo/launch/: p3dx_i2r_lvl12.launch  p3dx_i2r_lvl9.launch  p3dx_playpen.launch
p3dx_navigation/: CMakeLists.txt  package.xml
p3dx_navigation/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common.yaml  costmap_common_params.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  planner.yaml
p3dx_navigation/launch/: amcl.launch  amcl_demo.launch  move_base.launch  p3dx_move_base_flex.launch  teb.launch
p3dx_navigation/maps/: i2r_lvl9_floorplan.yaml  museum.yaml  office.yaml
p3dx_navigation/mbf_config/: global_costmap_params.yaml
p3dx_navigation/scripts/: move_base_legacy_relay.py
p3dx_viz/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_local.yaml
p3dx_viz/launch/: all_lasers.launch  view_robot.launch
p3dx_viz/rviz/: frontier_nav.rviz  office_viz.rviz  robot_pioneer_1.rviz  robot_pioneer_2.rviz  robot_pioneer_3.rviz  robot_pioneer_4.rviz  robot_pioneer_5.rviz  robot_pioneer_a.rviz
